--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -15,6 +15,12 @@ on:
       rbac_tag:
         required: true
         type: string
+      
+      update_schemas:
+        description: 'Optionally update schemas'
+        required: false
+        default: false
+        type: boolean
 
 jobs:
     deploy:
@@ -111,3 +117,60 @@ jobs:
               log_stream_name="${log_stream_prefix}/${container_name}/${{steps.run-task.outputs.TASK_ID}}"
 
               aws logs tail "$log_group_name" --log-stream-names "$log_stream_name"
+    schema_update:
+        name: Update schemas on ldap container ${{ github.event.inputs.environment }}-preapproved
+        if: github.event.inputs.update_schemas == 'true'
+        runs-on: ubuntu-latest
+        environment: delius-core-${{ github.event.inputs.environment }}-preapproved
+        permissions:
+          id-token: write
+        steps:
+          - name: Checkout different repository
+            uses: actions/checkout@v4
+            with:
+              repository: ministryofjustice/hmpps-ndelius-rbac
+              path: hmpps-ndelius-rbac
+
+          - name: Configure AWS Credentials
+            uses: aws-actions/configure-aws-credentials@v4
+            with:
+              role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+              role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+              aws-region: "eu-west-2"
+
+          - name: Set cluster ARN
+            id: set-cluster-arn
+            run: |
+                echo "CLUSTER_ARN=delius-core-${{ github.event.inputs.environment }}-cluster" >> $GITHUB_OUTPUT
+
+          - name: Get ECS Task ARN
+            id: get-task
+            run: |
+              TASK_ARN=$(aws ecs list-tasks --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} --service-name ${{ github.event.inputs.environment }}-ldap --query 'taskArns[0]' --output text)
+              echo "TASK_ARN=$TASK_ARN" >> $GITHUB_ENV
+
+          - name: Backup & remove existing schema files
+            run: |
+              SCHEMA_DIR="/etc/openldap/slapd.d/cn=config/cn=schema"
+
+              aws ecs execute-command \
+                --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
+                --task "$TASK_ARN" \
+                --container ldap \
+                --command "for file in /etc/openldap/slapd.d/cn=config/cn=schema/*{delius,pwm}.ldif; do [ -f $file ] && mv $file hmpps-ndelius-rbac/schemas/$(basename $file)-$(date +%Y%m%d%H%M%S).bak; done"
+
+          - name: Add delius schema
+            run: |
+              aws ecs execute-command \
+                --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
+                --task "$TASK_ARN" \
+                --container ldap \
+                --command "ldapadd -Y EXTERNAL -H ldapi:/// -f hmpps-ndelius-rbac/schemas/delius.ldif"
+
+          - name: Add pwm schema
+            run: |
+              aws ecs execute-command \
+                --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
+                --task "$TASK_ARN" \
+                --container ldap \
+                --command "ldapadd -Y EXTERNAL -H ldapi:/// -f hmpps-ndelius-rbac/schemas/pwm.ldif"
