--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -126,11 +126,6 @@ jobs:
         permissions:
           id-token: write
         steps:
-          - name: Checkout different repository
-            uses: actions/checkout@v4
-            with:
-              repository: ministryofjustice/hmpps-ndelius-rbac
-              path: hmpps-ndelius-rbac
 
           - name: Configure AWS Credentials
             uses: aws-actions/configure-aws-credentials@v4
@@ -150,13 +145,22 @@ jobs:
               TASK_ARN=$(aws ecs list-tasks --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} --service-name ${{ github.event.inputs.environment }}-ldap --query 'taskArns[0]' --output text)
               echo "TASK_ARN=$TASK_ARN" >> $GITHUB_ENV
 
+          - name: Clone rbac repo on ldap container
+            run: |
+              aws ecs execute-command \
+                --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
+                --task "$TASK_ARN" \
+                --container ldap \
+                --command "git clone --branch ${{ github.event.inputs.rbac_tag }} --depth 1 https://github.com/ministryofjustice/hmpps-ndelius-rbac.git /tmp/hmpps-ndelius-rbac" \
+                --interactive
+
           - name: Backup & remove existing schema files
             run: |
               aws ecs execute-command \
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "for file in /etc/openldap/slapd.d/cn=config/cn=schema/*{delius,pwm}.ldif; do [ -f $file ] && mv $file hmpps-ndelius-rbac/schemas/$(basename "$file")-$(date +%Y%m%d%H%M%S).bak; done" \
+                --command "for file in /etc/openldap/slapd.d/cn=config/cn=schema/*{delius,pwm}.ldif; do [ -f $file ] && mv $file /tmp/hmpps-ndelius-rbac/schemas/$(basename "$file")-$(date +%Y%m%d%H%M%S).bak; done" \
                 --interactive
 
           - name: Add delius schema
@@ -165,7 +169,7 @@ jobs:
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "ldapadd -Y EXTERNAL -H ldapi:/// -f hmpps-ndelius-rbac/schemas/delius.ldif" \
+                --command "ldapadd -Y EXTERNAL -H ldapi:/// -f /tmp/hmpps-ndelius-rbac/schemas/delius.ldif" \
                 --interactive
 
           - name: Add pwm schema
@@ -174,5 +178,5 @@ jobs:
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "ldapadd -Y EXTERNAL -H ldapi:/// -f hmpps-ndelius-rbac/schemas/pwm.ldif" \
+                --command "ldapadd -Y EXTERNAL -H ldapi:/// -f /tmp/hmpps-ndelius-rbac/schemas/pwm.ldif" \
                 --interactive
