--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -63,7 +63,7 @@ jobs:
              if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
                  echo "{\"TargetEnvironment\": \"${{ inputs.TargetEnvironment }}\",\"CronSchedule\": \"IMMEDIATE\",\"Action\": \"${{ inputs.FSFOMode }}\",\"SkipNonWorkingDays\": \"No\"}" > $schedule_file
                  cat $schedule_file
-                 SCHEDULED_JSON=$(jq $schedule_file | jq '{include: .}')
+                 SCHEDULED_JSON=$(jq '.' $schedule_file | jq '{include: .}')
              else
                  SCHEDULED_JSON=$(jq '[.[] | select (.CronSchedule=="${{ github.event.schedule }}") | {"TargetEnvironment","Schedule","Action","SkipNonWorkingDays"}]' $schedule_file | jq '{include: .}')
              fi
