--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -109,6 +109,7 @@ jobs:
       max-parallel: 1
       fail-fast: false
       matrix: ${{fromJson(needs.prepare-run-matrix.outputs.scheduled_matrix)}}
+    environment: ${{ matrix.TargetEnvironment }}
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.80.0
     steps:
