Change remote statistics identifier name

--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -229,7 +229,7 @@ jobs:
           if [[ -z ${{ needs.oracle-pre-delius-statistics.outputs.StatisticsIdentifier }} ]]
           then
             DATE=$(date +"%Y%m%dT%H%M%S")
-            ENV=$(echo ${{ needs.oracle-pre-delius-statistics.outputs.StatisticsIdentifier.ImportSourceEnvironment }} | awk -F- '{print $NF}')
+            ENV=$(echo ${{ needs.oracle-pre-delius-statistics.outputs.StatisticsIdentifier.ImportSourceEnvironment }} | awk -F- '{printf("%s_%s",$1,$NF)}')
             RemoteStatisticsIdentifier="${ENV^^}_${DATE}"
           else
             RemoteStatisticsIdentifier="${{ needs.oracle-pre-delius-statistics.outputs.StatisticsIdentifier }}"
