--- a/playbooks/oracle_statistics/oracle_statistics/tasks/import_remote_stats.yml
+++ b/playbooks/oracle_statistics/oracle_statistics/tasks/import_remote_stats.yml
@@ -1,18 +1,18 @@
-# Only check if Statistics have already been exported if a Statistics identifier has been specified
-- name: Check if Named Export {{ remote_statistics_identifier }} of Statistics Already Exists on Remote Bucket
-  amazon.aws.s3_object:
-    bucket: "{{ remote_environment_name }}-oracle-statistics-backup-data"
-    prefix: "datapump/{{ remote_statistics_identifier }}.dmp"
-    mode: list
-  register: get_already_exists
-  when: statid is defined
 
-- name: Set Export Already Run if Backup Already Exists on S3
-  set_fact:
-    already_exists: true
-  when:
-    - statid is defined
-    - ('datapump/' + remote_statistics_identifier + '.dmp') in get_already_exists.s3_keys
+  # Only check if Statistics have already been exported if a Statistics identifier has been specified
+# - name: Check if Named Export {{ remote_statistics_identifier }} of Statistics Already Exists on Remote Bucket
+#   amazon.aws.s3_object:
+#     bucket: "{{ remote_environment_name }}-oracle-db-statistics-backup-data"
+#     prefix: "datapump/{{ remote_statistics_identifier }}.dmp"
+#     mode: list
+#   register: get_already_exists
+
+# - name: Set Export Already Run if Backup Already Exists on S3
+#   set_fact:
+#     already_exists: true
+#   when:
+#     - statid is defined
+#     - ('datapump/' + remote_statistics_identifier + '.dmp') in get_already_exists.s3_keys
 
 # We need to get the Canonical ID of the current account to grant permission when copying the remote statistics dump to the local environment
 - name: Get Canonical ID
@@ -22,7 +22,7 @@
 
 # Now we need to copy the dump file to the current environment
 - name: Copy Statistics Dump from {{ remote_environment_name }} to {{ simple_environment_name }}
-  shell: aws s3 cp s3://{{ remote_environment_name }}-oracle-statistics-backup-data/datapump/{{ remote_statistics_identifier }}.{{ item }} s3://{{ statistics_backup_bucket }}/datapump/{{ remote_statistics_identifier }}.{{ item }} --grants full=id={{ get_canonical_id.stdout }}
+  shell: aws s3 cp s3://{{ remote_environment_name }}-oracle-db-statistics-backup-data/datapump/{{ remote_statistics_identifier }}.{{ item }} s3://{{ statistics_backup_bucket }}/datapump/{{ remote_statistics_identifier }}.{{ item }} --grants full=id={{ get_canonical_id.stdout }}
   loop: ["dmp", "log"]
 
 # Now we can download the dumpfile into the local database host
