--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -151,7 +151,7 @@ jobs:
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "git clone --branch ${{ github.event.inputs.rbac_tag }} --depth 1 https://github.com/ministryofjustice/hmpps-ndelius-rbac.git /tmp/hmpps-ndelius-rbac" \
+                --command "apk add --no-cache git && git clone --branch ${{ github.event.inputs.rbac_tag }} --depth 1 https://github.com/ministryofjustice/hmpps-ndelius-rbac.git /tmp/hmpps-ndelius-rbac" \
                 --interactive
 
           - name: Backup & remove existing schema files
@@ -160,7 +160,7 @@ jobs:
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "for file in /etc/openldap/slapd.d/cn=config/cn=schema/*{delius,pwm}.ldif; do [ -f $file ] && mv $file /tmp/hmpps-ndelius-rbac/schemas/$(basename "$file")-$(date +%Y%m%d%H%M%S).bak; done" \
+                --command "bash -c 'for file in /etc/openldap/slapd.d/cn=config/cn=schema/*{delius,pwm}.ldif; do [ -f $file ] && mv $file /tmp/hmpps-ndelius-rbac/schemas/$(basename "$file")-$(date +%Y%m%d%H%M%S).bak; done' " \
                 --interactive
 
           - name: Add delius schema
@@ -169,7 +169,7 @@ jobs:
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "ldapadd -Y EXTERNAL -H ldapi:/// -f /tmp/hmpps-ndelius-rbac/schemas/delius.ldif" \
+                --command "bash -c 'ldapadd -Y EXTERNAL -H ldapi:/// -f /tmp/hmpps-ndelius-rbac/schemas/delius.ldif' " \
                 --interactive
 
           - name: Add pwm schema
@@ -178,5 +178,5 @@ jobs:
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "ldapadd -Y EXTERNAL -H ldapi:/// -f /tmp/hmpps-ndelius-rbac/schemas/pwm.ldif" \
+                --command "bash -c 'ldapadd -Y EXTERNAL -H ldapi:/// -f /tmp/hmpps-ndelius-rbac/schemas/pwm.ldif' " \
                 --interactive
