--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -151,7 +151,7 @@ jobs:
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "apk add --no-cache git && git clone --branch ${{ github.event.inputs.rbac_tag }} --depth 1 https://github.com/ministryofjustice/hmpps-ndelius-rbac.git /tmp/hmpps-ndelius-rbac" \
+                --command "bash -c 'apk add --no-cache git && git clone --branch ${{ github.event.inputs.rbac_tag }} --depth 1 https://github.com/ministryofjustice/hmpps-ndelius-rbac.git /tmp/hmpps-ndelius-rbac' " \
                 --interactive
 
           - name: Backup & remove existing schema files
