--- a/.github/workflows/ldap-rbac-uplift.yml
+++ b/.github/workflows/ldap-rbac-uplift.yml
@@ -145,13 +145,22 @@ jobs:
               TASK_ARN=$(aws ecs list-tasks --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} --service-name ${{ github.event.inputs.environment }}-ldap --query 'taskArns[0]' --output text)
               echo "TASK_ARN=$TASK_ARN" >> $GITHUB_ENV
 
+          - name: Install git
+            run: |
+              aws ecs execute-command \
+                --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
+                --task "$TASK_ARN" \
+                --container ldap \
+                --command "bash -c 'apk add --no-cache git' " \
+                --interactive
+
           - name: Clone rbac repo on ldap container
             run: |
               aws ecs execute-command \
                 --cluster ${{ steps.set-cluster-arn.outputs.CLUSTER_ARN }} \
                 --task "$TASK_ARN" \
                 --container ldap \
-                --command "bash -c 'apk add --no-cache git && git clone --branch ${{ github.event.inputs.rbac_tag }} --depth 1 https://github.com/ministryofjustice/hmpps-ndelius-rbac.git /tmp/hmpps-ndelius-rbac' " \
+                --command "bash -c 'git clone --branch ${{ github.event.inputs.rbac_tag }} --depth 1 https://github.com/ministryofjustice/hmpps-ndelius-rbac.git /tmp/hmpps-ndelius-rbac' " \
                 --interactive
 
           - name: Backup & remove existing schema files
