--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -75,6 +75,12 @@ jobs:
              echo ${SCHEDULED_JSON} | sed 's/ //g'
              echo "scheduled_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
 
+      - name: Upload Run Schedule Filtering In The Current Schedule Only
+        uses: actions/upload-artifact@v4
+        with:
+          name: run_matrix_current
+          path: operations/.github/workflows/oracle-db-toggle-fsfo-schedule.json
+
   report-schedule-toggle-fsfo:
     needs: prepare-run-matrix
     runs-on: ubuntu-latest
@@ -121,15 +127,10 @@ jobs:
           delius_dbs_hosts="environment_name_$(echo ${{ matrix.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')_delius_*"
           echo "delius_dbs_hosts=${delius_dbs_hosts}" >> $GITHUB_OUTPUT
 
-      - name: Checkout Toggle FSFO Schedule
-        uses: actions/checkout@v4
+      - name: Download Run Schedule Including Current Runs Only
+        uses: actions/download-artifact@v4
         with:
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            .github/workflows/oracle-db-toggle-fsfo-schedule.json
-          path: operations
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'DBA-849' }}
-          fetch-depth: 0
+          name: run_matrix_current
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -169,8 +170,6 @@ jobs:
         run: |
           shopt -s nocasematch
           export ANSIBLE_CONFIG=$ansible_config
-          echo $schedule_file
-          cat $schedule_file
           WORKING_DAY=$( $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
                -e delius_hosts=${{ steps.prepareinventorynames.outputs.delius_dbs_hosts }} | awk -F"Today Day Type:" '/Today Day Type/{print $2}' | sed 's/^ //' | tr -d '"' )
           echo "WORKING DAY $WORKING_DAY"  
@@ -182,15 +181,15 @@ jobs:
           # Exclude Non-Working Days if this option is specified by removing this element from the schedule JSON file
           if [[ "${WORKING_DAY}" == "NO" && "${{ matrix.SkipNonWorkingDays }}" == "true" ]]
           then
-             jq 'map(select(not(.CronSchedule=="${{ matrix.CronSchedule }}" and .TargetEnvironment=="${{ matrix.TargetEnvironment }}" and .Action=="${{ matrix.Action }}" and .SkipNonWorkingDays="${{ matrix.SkipNonWorkingDays }}")))' $schedule_file > /tmp/schedule.json && mv /tmp/schedule.json $schedule_file 
+             jq 'map(select(not(.CronSchedule=="${{ matrix.CronSchedule }}" and .TargetEnvironment=="${{ matrix.TargetEnvironment }}" and .Action=="${{ matrix.Action }}" and .SkipNonWorkingDays="${{ matrix.SkipNonWorkingDays }}")))' oracle-db-toggle-fsfo-schedule.json > /tmp/schedule.json && mv /tmp/schedule.json oracle-db-toggle-fsfo-schedule.json
           fi
-          cat $schedule_file
+          cat oracle-db-toggle-fsfo-schedule.json
 
       - name: Upload Run Schedule Excluding Non Working Days
         uses: actions/upload-artifact@v4
         with:
           name: run_matrix_excluding_non_working
-          path: operations/.github/workflows/oracle-db-toggle-fsfo-schedule.json
+          path: oracle-db-toggle-fsfo-schedule.json
 
   # We regenerate the filtered run matrix now where any entries for non-working days have been removed
   prepare-filtered-run-matrix:
